<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6200ED">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/headerTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kalkulator_bmi"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_below="@id/toolbarBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textUmur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umur"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/inputUmur"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textUmur"
            android:hint="@string/masukkan_umur"
            android:importantForAutofill="no"
            android:inputType="phone" />
        <TextView
            android:id="@+id/textTahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/container2"
        android:layout_below="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textTinggiBadan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/inputTinggiBadan"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textTinggiBadan"
            android:hint="@string/masukkan_tinggi"
            android:importantForAutofill="no"
            android:inputType="phone" />
        <TextView
            android:id="@+id/textTinggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/container3"
        android:layout_below="@id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textBeratBadan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/inputBeratBadan"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textBeratBadan"
            android:hint="@string/masukkan_berat"
            android:importantForAutofill="no"
            android:inputType="phone" />
        <TextView
            android:id="@+id/textBerat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/hitung"
            android:textAllCaps="false"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btnHitung"
            android:text="@string/reset"
            android:textAllCaps="false"

            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btnIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/intent"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btnBundle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btnIntent"
            android:text="@string/bundle"
            android:textAllCaps="false"

            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btnSerializeAble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/serializeable"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btnParcelAble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btnSerializeAble"
            android:text="@string/parcelable"
            android:textAllCaps="false"

            />


    </RelativeLayout>



<!--    <RelativeLayout-->
<!--        android:id="@+id/container5"-->
<!--        android:layout_below="@id/container4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginTop="100dp">-->

<!--        <TextView-->
<!--            android:id="@+id/textHasil"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:text="HASIL : "-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->

<!--            />-->

<!--        &lt;!&ndash;        OUTPUT    &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/outputUmur"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/textHasil"-->
<!--            android:textSize="20sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/outputTinggi"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/outputUmur"-->
<!--            android:textSize="20sp" />-->
<!--        <TextView-->
<!--            android:id="@+id/outputBeratBadan"-->
<!--            android:layout_below="@id/outputTinggi"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="20sp"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/outputHasilBmi"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/outputBeratBadan"-->
<!--            android:textSize="20sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/outputKategori"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/outputHasilBmi"-->
<!--            android:textSize="20sp" />-->



<!--    </RelativeLayout>-->


</RelativeLayout>